# sevenux

./: .gitignore  LICENSE  PKGBUILD  PlayerDoubleException.py  README.md  bot.py  card.py  deck.py  game.py  game_actions.py  game_controller.py  player.py  pyproject.toml  sevenux.py  sevenuxui.py
src/sevenux/: PlayerDoubleException.py  bot.py  card.py  deck.py  game.py  game_actions.py  game_controller.py  main.py  player.py  sevenuxui.py
src/sevenux/ui/: sevenux_app.py
src/sevenux/ui/widgets/: card_board.py  card_widget.py
