[project]
name = "sevenux"
version = "0.0.1"
description = "Fast-paced terminal card game inspired by Flip 7"
authors = [
    {name = "FrancoisBasset",email = "mrfrancoisbasset@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = ["readchar (>=4.2.2,<5.0.0)", "textual (>=8.2.7,<9.0.0)"]

[project.scripts]
sevenux = "sevenux.main:main"

[tool.poetry]
packages = [{include = "sevenux", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "textual-dev (>=1.8.0,<2.0.0)"
]
